--- a/Ship.Web/Views/Account/Login.cshtml
+++ b/Ship.Web/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model SailorWeb.ViewModels.LoginViewModel
+﻿@model Ship.Web.ViewModels.LoginViewModel
 @{
     ViewBag.Title = "登录";
     Layout = "~/Views/Shared/_LayoutNoHeader.cshtml";
