--- a/Ship.Web/Views/Family/Index.cshtml
+++ b/Ship.Web/Views/Family/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using PagedList.Mvc;
-@model PagedList.IPagedList<SailorDomain.Entities.Family>
+﻿@model IPagedList<Ship.Core.Entities.Family>
 
 @{
     ViewBag.Title = "家庭成员列表";
