--- a/Ship.Web/Views/Interview/Create.cshtml
+++ b/Ship.Web/Views/Interview/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SailorDomain.Entities.Interview
+﻿@model Interview
 
 @{
     ViewBag.Title = "新增面试信息";
@@ -392,7 +392,7 @@
 @section scripts{
     <script>
         $(function () {
-            var SailorID = '@Request.QueryString["SailorID"]';
+            var SailorID = '@Context.Request.Query["SailorID"]';
             if (SailorID) {
                 $('#SailorID').select2("readonly", true);
                 var sailorUrl = '@Url.Action("GetSailor", "Sailor")';
