--- a/Ship.Web/Views/Interview/Index.cshtml
+++ b/Ship.Web/Views/Interview/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using PagedList.Mvc;
-@model PagedList.IPagedList<SailorDomain.Entities.Interview>
+﻿@model IPagedList<Interview>
 
 @{
     ViewBag.Title = "面试列表";
