--- a/Ship.Web/Views/LaborSupply/TakeList.cshtml
+++ b/Ship.Web/Views/LaborSupply/TakeList.cshtml
@@ -1,5 +1,4 @@
-﻿@using PagedList.Mvc
-@model PagedList.IPagedList<SailorDomain.Entities.LaborSupplyTake>
+﻿@model IPagedList<LaborSupplyTake>
 
 @{
     ViewBag.Title = "劳保用品领取记录";
