--- a/Ship.Web/Views/Notice/Message.cshtml
+++ b/Ship.Web/Views/Notice/Message.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SailorDomain.Entities.Notice>
+﻿@model IEnumerable<Notice>
 
 <!-- BEGIN NOTIFICATION DROPDOWN -->
 <li class="dropdown dropdown-extended dropdown-dark dropdown-notification" id="header_notification_bar">
