--- a/Ship.Web/Views/Notice/_NoticeHandle.cshtml
+++ b/Ship.Web/Views/Notice/_NoticeHandle.cshtml
@@ -1,4 +1,4 @@
-﻿@model SailorDomain.Entities.NoticeHandle
+﻿@model NoticeHandle
 
 <div class="modal fade" id="handleModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog">
