--- a/Ship.Web/Views/RolesAdmin/Index.cshtml
+++ b/Ship.Web/Views/RolesAdmin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Microsoft.AspNet.Identity.EntityFramework.IdentityRole>
+﻿@model IEnumerable<Microsoft.AspNetCore.Identity.IdentityRole>
 
 @{
     ViewBag.Title = "Index";
