--- a/Ship.Web/Views/Shipowner/Index.cshtml
+++ b/Ship.Web/Views/Shipowner/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using PagedList.Mvc
-@model PagedList.IPagedList<SailorDomain.Entities.Shipowner>
+﻿@model IPagedList<Shipowner>
 
 @{
     ViewBag.Title = "船东列表";
