--- a/Ship.Web/Views/Title/Index.cshtml
+++ b/Ship.Web/Views/Title/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using PagedList.Mvc;
-@model PagedList.IPagedList<SailorDomain.Entities.Title>
+﻿@model IPagedList<Title>
 
 @{
     ViewBag.Title = "职称列表";
