--- a/Ship.Web/Views/Trainee/Index.cshtml
+++ b/Ship.Web/Views/Trainee/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using PagedList.Mvc
-@model PagedList.IPagedList<SailorDomain.Entities.Trainee>
+﻿@model IPagedList<Trainee>
 
 @{
     ViewBag.Title = "培训人员列表";
