--- a/Ship.Web/Views/TrainingClass/Index.cshtml
+++ b/Ship.Web/Views/TrainingClass/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using PagedList.Mvc
-@model PagedList.IPagedList<SailorDomain.Entities.TrainingClass>
+﻿@model IPagedList<TrainingClass>
 
 @{
     ViewBag.Title = "培训班列表";
