--- a/Ship.Web/Views/UsersAdmin/Index.cshtml
+++ b/Ship.Web/Views/UsersAdmin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SailorWeb.Models.ApplicationUser>
+﻿@model IEnumerable<Ship.Web.Models.ApplicationUser>
 
 @{
     ViewBag.Title = "Index";
