--- a/Ship.Web/Views/Vessel/Index.cshtml
+++ b/Ship.Web/Views/Vessel/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using PagedList.Mvc
-@model PagedList.IPagedList<SailorDomain.Entities.Vessel>
+﻿@model IPagedList<Vessel>
 
 @{
     ViewBag.Title = "船舶列表";
