--- a/Ship.Web/Views/Vessel/ManagedList.cshtml
+++ b/Ship.Web/Views/Vessel/ManagedList.cshtml
@@ -1,6 +1,5 @@
 ﻿
-@using PagedList.Mvc
-@model PagedList.IPagedList<SailorDomain.Entities.Vessel>
+@model IPagedList<Vessel>
 
 @{
     ViewBag.Title = "船舶管理列表";
