--- a/Ship.Web/Views/VesselAccount/BalanceList.cshtml
+++ b/Ship.Web/Views/VesselAccount/BalanceList.cshtml
@@ -1,5 +1,4 @@
-﻿@using PagedList.Mvc;
-@model PagedList.IPagedList<SailorDomain.Entities.VesselBalance>
+﻿@model IPagedList<VesselBalance>
 
 @{
     ViewBag.Title = "船舶账户余额";
