--- a/Ship.Web/Views/VesselAccount/CostBill.cshtml
+++ b/Ship.Web/Views/VesselAccount/CostBill.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SailorWeb.ViewModels.VesselCostBill>
+﻿@model IEnumerable<Ship.Web.ViewModels.VesselCostBill>
 
 @{
     ViewBag.Title = "船舶账单汇总";
