--- a/Ship.Web/Views/VesselAccount/PaymentList.cshtml
+++ b/Ship.Web/Views/VesselAccount/PaymentList.cshtml
@@ -1,4 +1,4 @@
-﻿@model SailorDomain.Entities.VesselAccount
+﻿@model VesselAccount
 
 <div class="portlet light">
     <div class="portlet-body form">
