--- a/Ship.Web/Views/VesselCertificate/CertificateList.cshtml
+++ b/Ship.Web/Views/VesselCertificate/CertificateList.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IEnumerable<SailorDomain.Entities.VesselCertificate>
+@model IEnumerable<VesselCertificate>
 
 @{
     ViewBag.Title = "船舶证书列表";
@@ -34,10 +34,10 @@
                             <span class="caption-subject font-green-sharp bold uppercase">@ViewBag.Title</span>
                         </div>
                         <div class="caption">
-                            <span class="caption-subject bold note note-warning">船舶名称：@Request.QueryString["VesselName"]</span>
+                            <span class="caption-subject bold note note-warning">船舶名称：@Context.Request.Query["VesselName"]</span>
                         </div>
                         <div class="actions btn-set">
-                            <a href="@Url.Action("Create", new { VesselID = Request.QueryString["VesselID"], VesselName = Request.QueryString["VesselName"] })" class="btn btn-circle green-haze btn-sm">
+                            <a href="@Url.Action("Create", new { VesselID = Context.Request.Query["VesselID"], VesselName = Context.Request.Query["VesselName"] })" class="btn btn-circle green-haze btn-sm">
                                 <i class="fa fa-plus"></i> 添加
                             </a>
                             <a href="javascript:void(0)" class="btn btn-circle green btn-sm btn-search">
@@ -50,8 +50,8 @@
                         @using (Html.BeginForm("CertificateList", "VesselCertificate", FormMethod.Get, new { @class = "form-horizontal" }))
                         {
                             @Html.Hidden("status")
-                            @Html.Hidden("VesselID", Request.QueryString["VesselID"])
-                            @Html.Hidden("VesselName", Request.QueryString["VesselName"])
+                            @Html.Hidden("VesselID", Context.Request.Query["VesselID"])
+                            @Html.Hidden("VesselName", Context.Request.Query["VesselName"])
                             <button type="submit" class="display-hide"></button>
                             <div class="form-body">
                                 <div class="row">
