--- a/Ship.Web/Views/VesselCertificate/Index.cshtml
+++ b/Ship.Web/Views/VesselCertificate/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿
-@using PagedList.Mvc
-@model PagedList.IPagedList<SailorDomain.Entities.VesselCertificate>
+@model IPagedList<VesselCertificate>
 
 @{
     ViewBag.Title = "证书列表";
