--- a/Ship.Web/Views/Wage/Index.cshtml
+++ b/Ship.Web/Views/Wage/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@using PagedList.Mvc
-@using SailorDomain.Entities
-@model PagedList.IPagedList<DateTime>
+﻿
+@model IPagedList<DateTime>
 
 @{
     ViewBag.Title = "工资结算";
