--- a/Ship.Web/Views/_ViewImports.cshtml
+++ b/Ship.Web/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using X.PagedList.Mvc.Core
 @using X.PagedList
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper Ship.Infrastructure.TagHelpers.*, Ship.Infrastructure
