--- a/Ship.Web/Views/Family/Create.cshtml
+++ b/Ship.Web/Views/Family/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SailorDomain.Entities.Family
+﻿@model Family
 
 @{
     ViewBag.Title = "新增家庭成员";
@@ -163,7 +163,7 @@
 @section scripts{
     <script>
         $(function () {
-            var SailorID = '@Request.QueryString["SailorID"]';
+            var SailorID = '@Context.Request.Query["SailorID"]';
             if (SailorID) {
                 $('#SailorID').select2("readonly", true);
             }
