--- a/Ship.Web/Views/RolesAdmin/Details.cshtml
+++ b/Ship.Web/Views/RolesAdmin/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Microsoft.AspNet.Identity.EntityFramework.IdentityRole
+﻿@model Microsoft.AspNetCore.Identity.IdentityRole
 
 @{
     ViewBag.Title = "Details";
