--- a/Ship.Web/Views/UsersAdmin/Create.cshtml
+++ b/Ship.Web/Views/UsersAdmin/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SailorWeb.ViewModels.RegisterViewModel
+﻿@model Ship.Web.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Create";
 }
@@ -43,7 +43,7 @@
             @foreach (var item in (SelectList)ViewBag.RoleId)
             {
                 <input type="checkbox" name="SelectedRoles" value="@item.Value" class="checkbox-inline" />
-                @Html.Label(item.Value, new { @class = "control-label" })
+                <lable class="control-label">@item.Value</lable>
             }
         </div>
     </div>
