--- a/Ship.Web/Views/VesselAccount/CostList.cshtml
+++ b/Ship.Web/Views/VesselAccount/CostList.cshtml
@@ -1,6 +1,5 @@
-﻿@using SailorDomain.Entities
-@using PagedList.Mvc;
-@model PagedList.IPagedList<VesselAccount>
+﻿
+@model IPagedList<VesselAccount>
 
 @{
     ViewBag.Title = "船舶流水账记录";
@@ -35,10 +34,10 @@
                             <span class="caption-subject font-green-sharp bold uppercase">@ViewBag.Title</span>
                         </div>
                         <div class="caption">
-                            <span class="caption-subject bold note note-warning">船舶名称：@Request.QueryString["VesselName"]</span>
+                            <span class="caption-subject bold note note-warning">船舶名称：@Context.Request.Query["VesselName"]</span>
                         </div>
                         <div class="actions btn-set">
-                            <a href="@Url.Action("Cost", new { VesselID = Request.QueryString["VesselID"], VesselName = Request.QueryString["VesselName"] })" class="btn btn-circle green-haze">
+                            <a href="@Url.Action("Cost", new { VesselID = Context.Request.Query["VesselID"], VesselName = Context.Request.Query["VesselName"] })" class="btn btn-circle green-haze">
                                 <i class="fa fa-plus"></i> 添加进账记录
                             </a>
                             <a href="javascript:void(0)" class="btn btn-circle green btn-sm btn-search">
@@ -51,8 +50,8 @@
                         @using (Html.BeginForm("CostList", "VesselAccount", FormMethod.Get, new { @class = "form-horizontal" }))
                         {
                             @Html.Hidden("status")
-                            @Html.Hidden("VesselName", Request.QueryString["VesselName"])
-                            @Html.Hidden("VesselID", Request.QueryString["VesselID"])
+                            @Html.Hidden("VesselName", Context.Request.Query["VesselName"])
+                            @Html.Hidden("VesselID", Context.Request.Query["VesselID"])
                             <button type="submit" class="display-hide"></button>
                             <div class="form-body">
                                 <div class="row">
@@ -245,7 +244,7 @@
                            VesselID = ViewBag.SelectedVesselID,
                            CompanyID = ViewBag.SelectedCompanyID,
                            FeeItem = ViewBag.SelectedFeeItem,
-                           VesselName = Request.QueryString["VesselName"]
+                           VesselName = Context.Request.Query["VesselName"]
                        }))
                     </div>
                 </div>
@@ -255,7 +254,7 @@
     </div>
 </div>
 <!-- END PAGE CONTENT -->
-@Html.Partial("_ModifyRemark")
+<partial name="_ModifyRemark" />
 @section scripts{
     <script>
 
