--- a/Ship.Web/Views/VesselAccount/_ModifyRemark.cshtml
+++ b/Ship.Web/Views/VesselAccount/_ModifyRemark.cshtml
@@ -9,11 +9,9 @@
             <div class="portlet light">
                 <div class="portlet-body form">
                     <!-- BEGIN FORM-->
-                    @using (Ajax.BeginForm("ModifyRemark", "VesselAccount", null, new AjaxOptions { OnSuccess = "processSuccess" }, new { @class = "form-horizontal", role = "form" }))
-                    {
+                    <form asp-controller="VesselAccount" asp-action="ModifyRemark" ajax-success="processSuccess" class="form-horizontal" role="form">
                         <div class="form-body">
-                            @Html.AntiForgeryToken()
-                            @Html.ValidationSummary(true)
+                            <div asp-validation-summary="ModelOnly"></div>
                             <div class="form-group">
                                 <label class="control-label col-md-3"> 备注</label>
                                 <div class="col-md-9">
@@ -36,7 +34,7 @@
                                 </div>
                             </div>
                         </div>
-                    }
+                    </form>
                     <!-- END FORM-->
                 </div>
             </div>
